Minor example change.

--- a/examples/ScrollRelatively.html
+++ b/examples/ScrollRelatively.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Scroll By</title>
+<title>Scroll Relatively</title>
 <script src="../src/smoothscroll.js"></script>
 <style>
 html, body {
